# penguins_mlops

./: .env.template  .gitignore  Dockerfile.inference  dvc.yaml  main.py  pyproject.toml
.dvc/: config
.github/workflows/: cd.yml  ci.yml
docker/: serve
infra/: ecr.tf  iam.tf  main.tf  outputs.tf  s3.tf  variables.tf
model_artifacts/: .gitignore  feature_names.json  metrics.json  model_metadata.json  penguin_classifier_model.pkl  test_predictions.csv
notebooks/: EDA.ipynb
scripts/: deploy_endpoint.py  setup_monitoring.py
src/: __init__.py  data_loader.py  evaluate.py  features.py  inference.py  sagemaker_inference.py  train.py
src/data/: .gitignore  penguins.csv.dvc  toy_extra_data.csv  toy_extra_data.csv.dvc
tests/: test_deploy_endpoint.py  test_evaluate.py  test_features.py  test_inference.py  test_training_pipeline.py
