[project]
name = "penguins-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "skops>=0.14.0",
    "setuptools>=80.9.0",
    "pytest>=8.3.0",
    "mlflow>=3.12.0",
    "dvc>=3.67.1",
    "onnxruntime<1.20.0",
    "sagemaker>=3.10.1",
    "dvc-s3>=3.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
workspace = { members = ["."] }